services/k8s/homebridge/deployment.yaml
---
# Source: homebridge/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebridge
  labels:
    helm.sh/chart: homebridge-1.0.2
    app.kubernetes.io/name: homebridge
    app.kubernetes.io/instance: homebridge
    app.kubernetes.io/version: "3.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: homebridge
      app.kubernetes.io/instance: homebridge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homebridge
        app.kubernetes.io/instance: homebridge
    spec:
      serviceAccountName: homebridge
      securityContext:
        {}
      hostNetwork: true
      dnsPolicy: ClusterFirst
      containers:
        - name: homebridge
          securityContext:
            {}
          image: "oznu/homebridge:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: homebridge
              containerPort: 51826
              protocol: TCP
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
          - mountPath: /homebridge
            name: config
          - mountPath: /homebridge/startup.sh
            name: homebridge-configmap
            subPath: startup.sh
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 120
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 5
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 5
            timeoutSeconds: 10
          resources:
            {}
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: homebridge-config
      - name: homebridge-configmap
        projected:
          defaultMode: 0444
          sources:
          - configMap:
              name: homebridge
              items:
                - key: startup.sh
                  path: startup.sh
                  mode: 0755
